# epic-scripting-lang

./: .gitignore  Cargo.toml  test.file
.github/workflows/: rust.yml
benches/: 1_mil_lines.rs  6_mil_lines.rs  all_ast.rs  mod.rs
src/: lib.rs  main.rs
src/parser/: ast.rs  error.rs  mod.rs  parser.rs
src/tests/: mod.rs
src/tests/snapshots/: scripting_lang__parser__tests__parse_and_verify_all.snap
