[package]
name = "scripting-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
lasso = "0.6.0"
colored = "2.0.0"
peekmore = "1.0.0"

[dev-dependencies]
insta = "1.10.0"
paste = "1.0.6"
criterion = "0.3.5"

[[bench]]
name = "all_ast"
harness = false